Added discovery and search apis
