# src/app.ts
@@ -21,6 +21,7 @@ import programRouter from './routes/programRouter';
 import programRequestRouter from './routes/programRequestRouter';
 import billRouter from './routes/billRouter';
 import chatRouter from './routes/chatRouter';
+import discoveryRouter from './routes/discoveryRouter';
 
 const app = express();
 
@@ -40,6 +41,7 @@ app.use('/api/v1/programs', programRouter);
 app.use('/api/v1/requests', programRequestRouter);
 app.use('/api/v1/bills', billRouter);
 app.use('/api/v1/chats', chatRouter);
+app.use('/api/v1/discovery', discoveryRouter);
 
 const swaggerDocument = YAML.load('api-documentation.yaml');
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
